Fixed scroll on small devices horizontal, nav.

--- a/styles/components/Header/Nav.module.css
+++ b/styles/components/Header/Nav.module.css
@@ -1,19 +1,22 @@
 .container {
+  display: flex;
+  flex-direction: column;
   flex: 1;
   color: var(--text-color-gray);
-  display: flex;
-  align-items: center;
   background-color: var(--back-color);
-  overflow: auto;
-  overflow-x: hidden;
   font-size: .95em;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 2em 0;
 }
 
 .container > ul {
   display: flex;
   flex-direction: column;
-  gap: 1em;
   flex: 1;
+  gap: 1em;
+  width: 100%;
+  justify-content: center;
 }
 
 .container > ul > li {
